# olio-ohjelmointi

./: .gitignore  Syksy2024_projektitehtava.ipynb
Tehtava5TomiAhola/: asunto.cpp  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
Tehtava6_Laskin_TomiAhola/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Tehtava6_TomiAhola/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Tehtava7_TomiAhola/: shakkikello.cpp  shakkikello.h  shakkikello.ui
Viikko2Tehtava1TomiAhola/: game.cpp  game.h  main.cpp
Viikko4tehtavat_TomiAhola/: asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
Viikkotehtava3TomiAhola/: chef.cpp  chef.cpp.autosave  chef.h  italianchef.cpp  italianchef.cpp.autosave  italianchef.h  main.cpp  main.cpp.autosave
githubupload1/: CMakeLists.txt
tehtava1_tomi_ahola/: CMakeLists.txt  main.cpp
tehtava_1_ja_2_tomiahola/: CMakeLists.txt  main.cpp
